--- a/remix.html
+++ b/remix.html
@@ -28,44 +28,44 @@
 		</div>
 		<article>
 			<h1>Memo</h1>
-			<p>MEMO
+			<p>MEMO</p>
 
-To:  Christine Daniels
-From: Sarah Gutknecht
-Date: December 2, 2013
-Re: Remix Project Assessment Memo
+<p>To:  Christine Daniels</p>
+<p>From: Sarah Gutknecht</p>
+<p>Date: December 2, 2013</p>
+<p>Re: Remix Project Assessment Memo</p>
 
-Documentary Assessment 
+<p>Documentary Assessment </p>
 
-Overview: 
+<p>Overview:</p> 
 
-In our final remix project, my group decided to do our documentary based on the Cultural Analysis paper that was done earlier in the semester while maintaining focus on the social issue of technology use among teenagers in today’s society.  By doing this topic and having to compose a documentary of it, I was able to see exactly the amount of technology that is used among our generation. Since part of the work that needed to be done involved videotaping teenagers walking around campus on their phones; interviewing different ages on their use of technology. In doing so, I realized the actual negative effect technology has on society.  Through the documentary, I noticed that people don’t actually interact with people around them unless their phones or computers are involved. Many times I would see a group of people sitting at a table, and every one of them was on their phone, not actually having any social interaction with each other, and it is sad to see. Many people joke that today’s teenagers are not able to pick up a phone and call somebody; the only way they know to communicate is through text messaging, and we laugh, not realizing the sad truth.
+<p>In our final remix project, my group decided to do our documentary based on the Cultural Analysis paper that was done earlier in the semester while maintaining focus on the social issue of technology use among teenagers in today’s society.  By doing this topic and having to compose a documentary of it, I was able to see exactly the amount of technology that is used among our generation. Since part of the work that needed to be done involved videotaping teenagers walking around campus on their phones; interviewing different ages on their use of technology. In doing so, I realized the actual negative effect technology has on society.  Through the documentary, I noticed that people don’t actually interact with people around them unless their phones or computers are involved. Many times I would see a group of people sitting at a table, and every one of them was on their phone, not actually having any social interaction with each other, and it is sad to see. Many people joke that today’s teenagers are not able to pick up a phone and call somebody; the only way they know to communicate is through text messaging, and we laugh, not realizing the sad truth.</p>
 
-Analysis:
+<p>Analysis:</p>
 
-Composing in Context: 
-One of the struggles we had while getting our documentary together was finding different footage. We had decided when we were originally planning out the project that we would get various interviews and clips of people using their phones, but finding different clips to use that wouldn’t be 7-9 minutes of the same thing was difficult. The audience is who we are speaking to. While they may not have been interviewed in some of the clips, they are part of the statistics that are being portrayed throughout the documentary. 
+<p>Composing in Context: </p>
+<p>One of the struggles we had while getting our documentary together was finding different footage. We had decided when we were originally planning out the project that we would get various interviews and clips of people using their phones, but finding different clips to use that wouldn’t be 7-9 minutes of the same thing was difficult. The audience is who we are speaking to. While they may not have been interviewed in some of the clips, they are part of the statistics that are being portrayed throughout the documentary. </p>
 
-Process:
-When we were given the project and were told to start planning, we went through the different papers that had been written in the past to try and determine which one would make the best documentary. We decided on the Cultural Analysis paper. We figured it would provide the best documentary. We also talked about whose paper/ topic we were going to base the project on. Since two people in our group had written their paper on technology use in today’s society and we decided that social issue would be easier to put clips together since we live on a college campus.  The most challenging part of the project for me was finding footage. There is only a certain amount of time that can be of people using their phones. I finally came up with the idea of using family that is much younger to show the wide age variation of technology use as well as the difference between someone who uses a lot of technology and someone who doesn’t have access to it. Our group didn’t go about the project in a systematic way and that was problematic. Since we didn’t plan a specific schedule, it was very unorganized which lead to a video with less quality than what could have been made. 
+<p>Process:</p>
+<p>When we were given the project and were told to start planning, we went through the different papers that had been written in the past to try and determine which one would make the best documentary. We decided on the Cultural Analysis paper. We figured it would provide the best documentary. We also talked about whose paper/ topic we were going to base the project on. Since two people in our group had written their paper on technology use in today’s society and we decided that social issue would be easier to put clips together since we live on a college campus.  The most challenging part of the project for me was finding footage. There is only a certain amount of time that can be of people using their phones. I finally came up with the idea of using family that is much younger to show the wide age variation of technology use as well as the difference between someone who uses a lot of technology and someone who doesn’t have access to it. Our group didn’t go about the project in a systematic way and that was problematic. Since we didn’t plan a specific schedule, it was very unorganized which lead to a video with less quality than what could have been made.</p> 
 
-Research:
-Since most of the research was already done throughout the two essays that had been written about the technology use in our society while we were doing the documentary, I did not do any extra research outside of finding YouTube videos that would work for getting our information across to the viewers. 
+<p>Research:</p>
+<p>Since most of the research was already done throughout the two essays that had been written about the technology use in our society while we were doing the documentary, I did not do any extra research outside of finding YouTube videos that would work for getting our information across to the viewers. </p>
 
 
-Collaboration:
-Our group worked independently throughout a large portion of the project, which probably wasn’t the best way to go about it. When we originally started putting the project together, we had decided that we were going to out independently and get things to collectively add to the project later. When the time came to put the video together, Preston and Robert were the most familiar with putting all of the clips together - so they used the interviews, videos, and music that I sent them along with their clips to make the documentary. It was helpful having a group because I would not have been able to figure out how to put the video together for starters and it was helpful having input on how to make the video less boring than just having interviews over and over for the whole time. 
+<p>Collaboration:</p>
+<p>Our group worked independently throughout a large portion of the project, which probably wasn’t the best way to go about it. When we originally started putting the project together, we had decided that we were going to out independently and get things to collectively add to the project later. When the time came to put the video together, Preston and Robert were the most familiar with putting all of the clips together - so they used the interviews, videos, and music that I sent them along with their clips to make the documentary. It was helpful having a group because I would not have been able to figure out how to put the video together for starters and it was helpful having input on how to make the video less boring than just having interviews over and over for the whole time. </p>
 
-Project Management:
-Our planning for this project definitely could have been improved. Like I mentioned, we kind of let everyone go on their own to do the same thing; get clips of people using their phones or interviews. We should have thought of different ways to get the information across and then have each person go out and get something different so we had more variety within the documentary. It also could have been helpful to have all of the video clips done before break so we had time to get any more information if it was needed instead of waiting until after break to put everything together in case we were missing anything. If we had to redo this project, I would have gotten more organized from the beginning and made sure everything was done or had a plan to be done before leaving for break instead of freaking out after making sure everything is done. 
+<p>Project Management:</p>
+<p>Our planning for this project definitely could have been improved. Like I mentioned, we kind of let everyone go on their own to do the same thing; get clips of people using their phones or interviews. We should have thought of different ways to get the information across and then have each person go out and get something different so we had more variety within the documentary. It also could have been helpful to have all of the video clips done before break so we had time to get any more information if it was needed instead of waiting until after break to put everything together in case we were missing anything. If we had to redo this project, I would have gotten more organized from the beginning and made sure everything was done or had a plan to be done before leaving for break instead of freaking out after making sure everything is done. </p>
 
-Documentary Design:
-The most effective aspect of the video was the use of the YouTube video to show actual statistics from popular news broadcast. By using this clip, the credibility of our statements on the social issue was improved. We made our design decisions after we saw what we had with video clips. We used clips of people using their phones around campus as fill-ins between the clips of people talking since there was no sound for those clips. After reviewing the pieces of video that we had, we placed the clips with the most important information at the beginning and the interviews and less informational clips later on in the documentary. 
+<p>Documentary Design:</p>
+<p>The most effective aspect of the video was the use of the YouTube video to show actual statistics from popular news broadcast. By using this clip, the credibility of our statements on the social issue was improved. We made our design decisions after we saw what we had with video clips. We used clips of people using their phones around campus as fill-ins between the clips of people talking since there was no sound for those clips. After reviewing the pieces of video that we had, we placed the clips with the most important information at the beginning and the interviews and less informational clips later on in the documentary. </p>
 
-Concluding Remarks:
+<p>Concluding Remarks:</p>
 
-Overall, the place that could have been improved upon the most would be the organization of the project. Making sure there is a set schedule to ensure everything done as well as maintaining constant contact with each other. Taking this approach would serve to reinforce that every part of the assignment that needs to be completed is being done by someone. We could also have initially brainstormed more original visuals on how to get the information we needed across to the viewers. While there is room for much improvement, with the few weeks we had and the somewhat limited knowledge of video technology, I thought the use of clips, YouTube videos, and music was put together well.
-</p>
+<p>Overall, the place that could have been improved upon the most would be the organization of the project. Making sure there is a set schedule to ensure everything done as well as maintaining constant contact with each other. Taking this approach would serve to reinforce that every part of the assignment that needs to be completed is being done by someone. We could also have initially brainstormed more original visuals on how to get the information we needed across to the viewers. While there is room for much improvement, with the few weeks we had and the somewhat limited knowledge of video technology, I thought the use of clips, YouTube videos, and music was put together well.</p>
+
 		</article>
 		<footer>
 		<p>&copy; 2013 Sarah</p>
