--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</ul>
 		</header>
 		<main>
-			<h1>about me</h1>
+			<h1>About Me</h1>
 			<p>My name is Sarah and I am a freshman from Farmington Hills, Michigan. I play softball here at Michigan State and I plan to major in either psychology or animal science and later go onto vet school. I have an older brother who unfortunately, goes to UofM. I have two cats and a dog at home that I love to death. I love country music and love going up north to our cottage to go four wheeling through the woods, spend the day at the beach, and sit by the bonfire at night.  </p>
 		</main>
 		<footer>
