--- a/course.html
+++ b/course.html
@@ -3,34 +3,27 @@
 <meta name="description" content="Basic Portfolio">
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
+<title>Final Retrospective | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
-<title>my portfolio</title>
 </head>
 <body>
-	<content>
-		<header>
+	<header>
 		<h1>my portfolio</h1>
 		<ul id="nav">
 			<li><a href="index.html">home</a></li>
-			<li><a href="lived.html">lived <br />experiences</a></li>
+			<li><a href="lived.html">lived <br />experiences</br></a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
 			<li><a href="formal.html">formal <br />research</a></li>
 			<li><a href="remix.html">remix</a></li>
 			<li><a href="course.html">course <br />retrospective</a></li>
 			<li><a href="blog.html">blog</a></li>
 		</ul>
-		</header>
-		<div id="menu">
-	
-				<li><a href="course.html">Final Retrospective</a></li>
-	
-		</div>
-		<main>
-			<h1>Final Retrospective</h1>
-			<p>Gay marriage has become an overly popular subject throughout society over the last decade. Unfortunately, many people view it as a negative and the country cannot come to terms on whether it should be legalized or not. Some states in the United States have voted to legalize gay marriage but there are still many who have not which causes the marriage to not be recognized by the federal government. By legalizing gay marriages all throughout the country, acceptance of homosexuals would increase and there would be less suicides and self-harm because of targeting of this minority. </p>
-		</main>
-		<footer>
+	</header>
+	<main>
+		<h1>Final Retrospective</h1>
+		<p>When I was younger I had a routine that included watching TV every day when I came home from school. Throughout the hours of cartoons and Full House that were watched, I had gotten to see my fair share of commercials. One specific commercial influenced my choice of majors for today. The ASPCA and animal abuse commercials, which encouraged people to donate money to help provide vaccinations, food, and shelter for these helpless animals always made me upset.  With an already existent love of animals, as I grew up and continued to see these commercials, I realized that I wanted to be able to help these animals leading me to become a pre-vet major.</p>
+
+	</main>
+	<footer>
 		<p>&copy; 2013 Sarah</p>
-		</footer>
-	</content>
-</body>	
+	</footer>
