--- a/course.html
+++ b/course.html
@@ -3,9 +3,8 @@
 <meta name="description" content="Basic Portfolio">
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
-<title>Final Retrospective | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
-</head>
+<title>my portfolio</title>
 <body>
 	<header>
 		<h1>my portfolio</h1>
