--- a/lived.html
+++ b/lived.html
@@ -3,8 +3,8 @@
 <meta name="description" content="Basic Portfolio">
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
-<title>lived experiences project | my portfolio</title>
 <link type="text/css" rel="stylesheet" href="style.css">
+<title>my portfolio</title>
 </head>
 <body>
 	<header>
