--- a/course.html
+++ b/course.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="style.css">
 <title>my portfolio</title>
+</head>
 <body>
 	<header>
 		<h1>my portfolio</h1>
