--- a/course.html
+++ b/course.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <head>
 <meta name="description" content="Basic Portfolio">
-<meta name="author" content="name goes here">
+<meta name="author" content="Sarah Gutknecht">
 <meta charset="UTF-8">
+<title>Blog</title>
 <link type="text/css" rel="stylesheet" href="style.css">
-<title>my portfolio</title>
 </head>
 <body>
 	<header>
@@ -20,10 +20,11 @@
 		</ul>
 	</header>
 	<main>
-		<h1>Final Retrospective</h1>
-		<p>When I was younger I had a routine that included watching TV every day when I came home from school. Throughout the hours of cartoons and Full House that were watched, I had gotten to see my fair share of commercials. One specific commercial influenced my choice of majors for today. The ASPCA and animal abuse commercials, which encouraged people to donate money to help provide vaccinations, food, and shelter for these helpless animals always made me upset.  With an already existent love of animals, as I grew up and continued to see these commercials, I realized that I wanted to be able to help these animals leading me to become a pre-vet major.</p>
-
+		
+	</h1>Final Retrospective</h1>
+		
+<p> FINAL PAPER GOES HERE </p>
 	</main>
 	<footer>
-		<p>&copy; 2013 Sarah</p>
+		<p>&copy; 2013 Sarah </p>
 	</footer>
