--- a/course.html
+++ b/course.html
@@ -3,7 +3,7 @@
 <meta name="description" content="Basic Portfolio">
 <meta name="author" content="Sarah Gutknecht">
 <meta charset="UTF-8">
-<title>Blog</title>
+<title>Course</title>
 <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
