--- a/course.html
+++ b/course.html
@@ -21,7 +21,7 @@
 	</header>
 	<main>
 		
-	</h1>Final Retrospective</h1>
+	<h1>Final Retrospective</h1>
 		
 <p> FINAL PAPER GOES HERE </p>
 	</main>
