--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 			<li><a href="blog.html">blog</a></li>
 		</ul>
 	</header>
-	<main></h1>BLOG SPOT</h1>
+	<main><h1>BLOG SPOT</h1>
 		
 <p>9/5/13- Lived Experience Paper: For the first paper, we had to talk about a major that we wanted to pursue and then identify a piece of technology that was related to that field and talk about how they are related. I chose to talk about a commercial, specifically an ASPCA commercial and how it was related to veterinary medicine, my planned career.</p>
 
