--- a/remix2.html
+++ b/remix2.html
@@ -28,7 +28,8 @@
 		</div>
 		<article>
 			<h1>Documentary</h1>
-			<p> link to video goes here</p>
+			<p> Documentary link</p>
+			<p> <a href="http://gutknec3.github.io/template-1/remix.html"></a></p>
 		</article>
 		<footer>
 		<p>&copy; 2013 Sarah</p>
