--- a/remix2.html
+++ b/remix2.html
@@ -28,8 +28,7 @@
 		</div>
 		<article>
 			<h1>Documentary</h1>
-			<p> Documentary link</p>
-			<p> <a href="http://gutknec3.github.io/template-1/remix.html"></a></p>
+		 <p> <a href="http://www.youtube.com/watch?v=Qsi1-MjeRAA&feature=youtu.be"> YouTube link </a> </p>
 		</article>
 		<footer>
 		<p>&copy; 2013 Sarah</p>
