--- a/remix2.html
+++ b/remix2.html
@@ -28,7 +28,7 @@
 		</div>
 		<article>
 			<h1>Documentary</h1>
-		 <p> <a href="http://www.youtube.com/watch?v=Qsi1-MjeRAA&feature=youtu.be"> YouTube link </a> </p>
+		 <p> <a href="http://www.youtube.com/watch?v=Qsi1-MjeRAA&feature=youtu.be"> Click here to see the video! </a> </p>
 		</article>
 		<footer>
 		<p>&copy; 2013 Sarah</p>
