--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <head>
-<meta name="description" content="Basic Portfolio">
+<meta name="description" content="Cultural Analysis">
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="style.css">
-<title>my portfolio</title>
+<title>Cultural Analysis</title>
 </head>
 <body>
 	<content>
@@ -12,7 +12,7 @@
 		<h1>my portfolio</h1>
 		<ul id="nav">
 			<li><a href="index.html">home</a></li>
-			<li><a href="lived.html">lived <br />experiences</br></a></li>
+			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
 			<li><a href="formal.html">formal <br />research</a></li>
 			<li><a href="remix.html">remix</a></li>
@@ -20,12 +20,32 @@
 			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
-		<main>
-			<h1>About Me</h1>
-			<p>My name is Sarah and I am a freshman from Farmington Hills, Michigan. I play softball here at Michigan State and I plan to major in either psychology or animal science and later go onto vet school. I have an older brother who unfortunately, goes to UofM. I have two cats and a dog at home that I love to death. I love country music and love going up north to our cottage to go four wheeling through the woods, spend the day at the beach, and sit by the bonfire at night.  </p>
-		</main>
+		<div id="menu">
+			<ul>
+				<li><a href="index.html">About Me</a></li>
+				<li><a href="index2.html">Photo Gallery</a></li>
+			</ul>
+		</div>
+		<article>
+			<h1>If ya wanna get to know me... </h1>
+		 <p> My name is Sarah Gutknecht and I am a freshman from Farmington Hills, Michigan. I play softball here at Michigan State and play 3rd or 1st base. As of now, I plan to majoring in either psychology but going on to vet school. I live with my mom, dad and older brother who is a senior at UofM (unfortunately). I have grown up with three cats and a dog, but one of the cats had to be put down before Thanksgiving due to medical reasons. In 4th grade my family bought a house in Traverse City, Michigan and my favorite thing to do in the summer is go up there to go four wheeling through the woods, spend the day at the beach, and sit by the bonfire at night. </p>
+		<p>In case that isn't enough information, here are some random facts about me:</p>
+		 <ol>
+		 	<li>I love country music, especially when it comes out of Jason Aldean’s mouth.</li>
+		 	<li>My favorite holiday is Christmas because I love the atmosphere of the season. </li>
+		 	<li>I have eleven piercings, all in my ears, nine of which I have done on my own. </li>
+		 	<li>I have lived in the same house since I was born.</li>
+		 	<li>My dream place to visit is Greece.</li>
+		 	<li>I am a perfectionist.</li>
+		 	<li>I love math and science, hate history.</li>
+		 	<li>I want to move to North Carolina when I grow up.</li>
+		 	<li>I am convinced I own the cutest dog to walk this earth. </li>
+		 	
+		 </ol>
+		</article>
 		<footer>
 		<p>&copy; 2013 Sarah</p>
 		</footer>
 	</content>
 </body>	
+
