--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <head>
-<meta name="description" content="Basic Portfolio">
+<meta name="description" content="Cultural Analysis">
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="style.css">
-<title>my portfolio</title>
+<title>Cultural Analysis</title>
 </head>
 <body>
 	<content>
@@ -12,7 +12,7 @@
 		<h1>my portfolio</h1>
 		<ul id="nav">
 			<li><a href="index.html">home</a></li>
-			<li><a href="lived.html">lived <br />experiences</br></a></li>
+			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
 			<li><a href="formal.html">formal <br />research</a></li>
 			<li><a href="remix.html">remix</a></li>
@@ -20,10 +20,17 @@
 			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
-		<main>
-			<h1>About Me</h1>
-			<p>My name is Sarah and I am a freshman from Farmington Hills, Michigan. I play softball here at Michigan State and I plan to major in either psychology or animal science and later go onto vet school. I have an older brother who unfortunately, goes to UofM. I have two cats and a dog at home that I love to death. I love country music and love going up north to our cottage to go four wheeling through the woods, spend the day at the beach, and sit by the bonfire at night.  </p>
-		</main>
+		<div id="menu">
+			<ul>
+				<li><a href="index.html">About Me</a></li>
+				<li><a href="index2.html">Photo Gallery</a></li>
+			</ul>
+		</div>
+		<article>
+			<h1>Pictures make things more fun, so here ya go </h1>
+		 <p> </p>
+		 
+		</article>
 		<footer>
 		<p>&copy; 2013 Sarah</p>
 		</footer>
