--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,15 @@
 		</div>
 		<article>
 			<h1>Pictures make things more fun, so here ya go </h1>
-		 <p> </p>
+		 <p> <img src="IMG_4497.JPG" See, the cutest! /></p>
+		 <p> <img src="IMG_9221.PNG" This is the 2013 Michigan State Softball team. /></p>
+		 <p> <img src="IMG_9251.jpg" This is my amazing father and I before my senior prom. /></p>
+		 <p> <img src="IMG_0493.JPG" This is my cousin Juliana and I at Disney World during spring break 2012./></p>
+		 <p> <img src="photo 2.JPG" My brother and I on move in day, August 2013./></p>
+		 <p> <img src="IMG_6785.JPG" This is my friend Kelsey and I in the Everglades of Florida holding alligators during spring break 2013./></p>
+		 <p> <img src="IMG_7774.JPG" My momma and I swimming with dolphins in the Bahamas! /></p>
+		 <p> <img src="IMG_7661.jpg" My high school softball team after our Strike Out Breast Cancer game. /></p>
+		 <p> <img src="IMG_2438.JPG" This is my high school volleyball team after we won city champs for the third consecutive year. /></p>
 		 
 		</article>
 		<footer>
