--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,7 @@
 		</div>
 		<article>
 			<h1>Pictures make things more fun, so here ya go </h1>
+		 <img src'162983_479180053965_5943269_n'/>
 		 <p><img src='IMG_4497.JPG'/> See, the cutest. </p>
 		 <p><img src='IMG_9221.PNG'/> This is the 2013 Michigan State Softball team.</p>
 		 <p><img src='IMG_9251.jpg'/> This is my amazing father and I before my senior prom.</p>
