--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</ul>
 		</header>
 		
-		<article>
+		<main>
 			<h1>If ya wanna get to know me... </h1>
 		 <p> My name is Sarah Gutknecht and I am a freshman from Farmington Hills, Michigan. I play softball here at Michigan State and play 3rd or 1st base. As of now, I plan to majoring in either psychology but going on to vet school. I live with my mom, dad and older brother who is a senior at UofM (unfortunately). I have grown up with three cats and a dog, but one of the cats had to be put down before Thanksgiving due to medical reasons. In 4th grade my family bought a house in Traverse City, Michigan and my favorite thing to do in the summer is go up there to go four wheeling through the woods, spend the day at the beach, and sit by the bonfire at night. </p>
 		<p>In case that isn't enough information, here are some random facts about me:</p>
@@ -37,7 +37,7 @@
 		 	<li>I am convinced I own the cutest dog to walk this earth. </li>
 		 	
 		 </ol>
-		</article>
+		</main>
 		<footer>
 		<p>&copy; 2013 Sarah</p>
 		</footer>
