--- a/course2.html
+++ b/course2.html
@@ -4,7 +4,7 @@
 <meta name="author" content="name goes here">
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="style.css">
-<title>Cultural Analysis</title>
+<title>Course Retrospective</title>
 </head>
 <body>
         <content>
